--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ TestResults/
 *.userosscache
 *.sln.docstates
 .vscode/
+!.vscode/extensions.json
+!.vscode/settings.json
 
 # OS / temp
 .DS_Store
